cluster/manifests/slack-bolt-proxy/overlays/dev/peer_authentication.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: slack-bolt-proxy
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: slack-bolt-proxy
      app.kubernetes.io/component: ""
  mtls:
    mode: STRICT
