cluster/manifests/slack-bolt-proxy/overlays/dev/sidecar.yaml
apiVersion: networking.istio.io/v1
kind: Sidecar
metadata:
  name: slack-bolt-proxy
spec:
  workloadSelector:
    labels:
      app.kubernetes.io/name: slack-bolt-proxy
      app.kubernetes.io/component: ""
  outboundTrafficPolicy:
    mode: REGISTRY_ONLY
  egress:
    - captureMode: DEFAULT
      hosts:
        - ./slack.com
        - ./www.slack.com
        - ./wss-primary.slack.com
        - ./cortex-bot.cortex-bot.svc.cluster.local
        - istio-system/istiod.istio-system.svc.cluster.local
        - otel/otel-agent.otel.svc.cluster.local
